# jetsam

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.lq/: commands.toml  config.toml
ci/: lint.sh  test.sh  typecheck.sh
docs/: conf.py  configuration.md  getting-started.md  index.md  mcp.md  requirements.txt  verbs.md
docs/tasks/: P5-001-fix-sha-extraction.md  P5-002-consolidate-platform-error.md  P5-003-add-py-typed-marker.md  P5-004-add-test-coverage.md  P5-005-trigger-plan-cleanup.md  P6-001-wire-config-into-planners.md  P6-002-standardize-mcp-error-returns.md  P6-003-plan-to-dict-completeness.md  P6-004-thread-state-through-executor.md  P7-001-add-draft-flag-to-ship.md  P7-002-cli-edit-flow.md  P7-003-add-config-verb.md  P8-001-reorganize-test-files.md  P8-002-negative-path-platform-tests.md  P8-003-add-structured-logging.md  README.md
docs/vision/: jetsam-product-spec.md
src/jetsam/: __init__.py
src/jetsam/cli/: main.py  passthrough.py
src/jetsam/cli/verbs/: checks.py  completions.py  diff.py  finish.py  init.py  issues.py  log.py  pr.py  prs.py  release.py  save.py  ship.py  start.py  status.py  switch.py  sync.py  tidy.py
src/jetsam/config/: manager.py
src/jetsam/core/: executor.py  output.py  planner.py  plans.py  state.py
src/jetsam/git/: parsers.py  wrapper.py
src/jetsam/mcp/: __main__.py  server.py  tools.py
src/jetsam/worktree/: integration.py
tests/: conftest.py  test_cli_verbs.py  test_config.py  test_executor.py  test_git_wrapper.py  test_integration.py  test_mcp_tools.py  test_output.py  test_parsers.py  test_phase2.py  test_phase3.py  test_phase4.py  test_planner.py  test_platform_github.py  test_platform_gitlab.py  test_smoke.py  test_state.py  test_worktree.py
