[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jetsam"
version = "0.1.0"
description = "Git workflow accelerator for humans and agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
jetsam = "jetsam.cli.main:cli"
jt = "jetsam.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/jetsam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
