[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jetsam-mcp"
version = "0.1.1"
description = "Git workflow accelerator for humans and agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Teague Sterling" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Intended Audience :: Developers",
]
dependencies = [
    "click>=8.1",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/teaguesterling/jetsam"
Repository = "https://github.com/teaguesterling/jetsam"
Issues = "https://github.com/teaguesterling/jetsam/issues"
Changelog = "https://github.com/teaguesterling/jetsam/blob/main/CHANGELOG.md"
Documentation = "https://jetsam.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "myst-parser>=3.0",
]

[project.scripts]
jetsam = "jetsam.cli.main:cli"
jt = "jetsam.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/jetsam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
